# ghost-sentry

./: .env.example  .gitignore  AGENTIC_FRAMEWORK.md  Dockerfile  LICENSE  README.md  docker-compose.yml  ghost_sentry.db  lattice_events.jsonl  mint.json  pyproject.toml
.agent/: AGENTS.md
.agent/artifacts/implementation_plans/: detailed_execution_plan.md  detailed_execution_plan_phase2.md  detailed_execution_plan_phase3.md  implementation_plan.md
.agent/memory/: active_context.md  roadmap.md
.agent/workflows/: feature-development.md
.github/workflows/: ci.yml
data/samples/: README.md  mock_detections.json  mock_sar.json
deploy/: web.Dockerfile
docs/: ARCHITECTURE.md  INTEGRATION.md  ROADMAP.md  introduction.mdx
docs/api-reference/: endpoints.mdx
docs/architecture/: lattice-integration.mdx  overview.mdx
docs/archive/: ARCHITECTURE.md  LATTICE_INTEGRATION.md  ROADMAP.md
docs/development/: roadmap.mdx  setup.mdx
scripts/: simulate_assets.py
src/: ghost_sentry.db
src/ghost_sentry/: api.py  cli.py
src/ghost_sentry/console/: app.py
src/ghost_sentry/core/: analytics.py  assets.py  correlation.py  db.py  detector.py  events.py  fusion.py  geo.py  satellite.py  sentry.py  tasks.py  threat.py  track_state.py
src/ghost_sentry/lattice/: adapter.py  entities.py
src/ghost_sentry/output/: cot.py
tests/: __init__.py  test_analytics.py  test_assets.py  test_core.py  test_correlation.py  test_db.py  test_formation.py  test_tasks.py  test_threat.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
(+7 files in other folders)
